# ri

./: .gitignore  README.md
rp/include/rp/: rp.h  rp_common.h
rp/include/util/: hash.h  int.h  util.h  vector.h
rp/src/: Makefile  Makefile.conf
rp/src/rp/: Makefile  rp.c  rp_app.c  rp_common.c  rp_join.c
rp/src/util/: Makefile  hash.c  int.c  util.c  vector.c
tp1/: CMakeLists.txt  algo.txt
tp1/data/charset/: iso utf
tp1/data/statistics/: runs.txt
tp1/doc/: tp1.tex
tp1/lib/ricp/: CMakeLists.txt
tp1/lib/ricp/src/: CollectionReader.cpp  CollectionWriter.cpp  CollectionWriter.h
tp1/scripts/: collection-size.sh  colsize.csv
tp1/src/: CMakeLists.txt  collection_processer.h  collection_processor.cc  collection_processor.h  document_source.cc  document_source.h  file_handler.cc  file_handler.h  heap.h  htmltidy.cc  indexer.cc  indexer.h  inverted_list.cc  inverted_list.h  main.cc  query.cc  string_tokenizer.h  temp_file.cc  temp_file.h  term_extractor.cc  term_extractor.h  utils.cc  utils.h  vocabulary.h
tp1/test/: CMakeLists.txt  collection_processor_test.cc  document_source_mock.h  inverted_list_test.cc  term_extractor_test.cc  utils_test.cc
tp3/data/: pagesRICompressed0.html
tp3/doc/: tp3.tex
tp3/lib/ricp/src/: envDefault.h
tp3/scripts/: buffer-size.sh
tp3/src/: CMakeLists.txt  anchor_indexer.h  collection_processor.cc  collection_processor.h  doc_db.h  document_source.cc  indexer.cc  inverted_list.cc  inverted_list.h  links_processor.cc  links_processor.h  page_ranker.h  prmain.cc  string_tokenizer.cc  utils.cc  utils.h  vocabulary.h
tp3/test/: CMakeLists.txt  doc_db_test.cc  document_source_mock.h  indexer_mock.h  inverted_list_test.cc
webui/app/controllers/: Application.scala
webui/app/main/: ChartHelper.scala  Main.scala  Main2.scala
webui/app/models/: DocumentDb.scala  QueryEngine.scala  QueryResult.java  QueryResult.scala  RankingModel.scala  SearchParams.scala  VectorialModel.scala  Vocabulary.scala
webui/app/utils/: AccumulatorPool.java  FileUtils.java  HeapList.java  RankingScheme.java  StringUtils.java
webui/app/views/: main.scala.html  pagerank.scala.html  search.scala.html  searchForm.scala.html  searchResult.scala.html  vocabulary.scala.html
webui/conf/: application.conf  routes
webui/data/: out.docs.txt  out.pr.txt
webui/project/: Build.scala
webui/stats/: bm25.txt  convergence.r  convergence.txt  plot.r  rscript.r
webui/test/: ApplicationSpec.scala  StringUtilsSpec.scala
